Поиск по полю в листинге, поиск пользователя по паспорту
